@@ -38,4 +38,9 @@ feature 'postgresql', 'PostgreSQL support' => sub {
 };
 feature 'sqlite', 'SQLite support' => sub {
     requires 'Mojo::SQLite', '>= 3.000';
-}
+};
+feature 'mysql', 'MySQL support' => sub {
+    requires 'DBD::mysql', '== 4.046';
+    requires 'Mojo::mysql';
+    requires 'Mojolicious::Plugin::PgURLHelper';
+};
