@@ -114,7 +114,7 @@
     #mail_sender => 'no-reply@lufi.io',
 
     # choose what database you want to use
-    # valid choices are sqlite and postgresql (all lowercase)
+    # valid choices are sqlite, postgresql and mysql (all lowercase)
     # optional, default is sqlite
     #dbtype => 'sqlite',
 
@@ -131,8 +131,28 @@
     #pgdb => {
     #    database => 'lufi',
     #    host     => 'localhost',
-    #    #user     => 'DBUSER',
-    #    #pwd      => 'DBPASSWORD'
+    #    # optional, default is 5432
+    #    #port     => 5432,
+    #    user     => 'DBUSER',
+    #    pwd      => 'DBPASSWORD',
+    #    # https://mojolicious.org/perldoc/Mojo/Pg#max_connections
+    #    # optional, default is 1
+    #    #max_connections => 1,
+    #},
+
+    # MySQL ONLY - only used if dbtype is set to mysql
+    # these are the credentials to access the MySQL database
+    # mandatory if you choosed mysql as dbtype
+    #mysqldb => {
+    #    database => 'lufi',
+    #    host     => 'localhost',
+    #    # optional, default is 3306
+    #    #port     => 3306,
+    #    user     => 'DBUSER',
+    #    pwd      => 'DBPASSWORD',
+    #    # https://metacpan.org/pod/Mojo::mysql#max_connections
+    #    # optional, default is 5 (set to 0 to disable persistent connections)
+    #    #max_connections => 5,
     #},
 
     # define a path to the upload directory, where the uploaded files will be stored
