@@ -116,14 +116,14 @@
     # choose what database you want to use
     # valid choices are sqlite, postgresql and mysql (all lowercase)
     # optional, default is sqlite
-    #dbtype => 'sqlite',
+    dbtype => 'mysql',
 
     # SQLite ONLY - only used if dbtype is set to sqlite
     # define a path to the SQLite database
     # you can define it relative to lufi directory or set an absolute path
     # remember that it has to be in a directory writable by Lufi user
     # optional, default is lufi.db
-    db_path           => 'sqlite.db',
+    #db_path           => 'lufi.db',
 
     # PostgreSQL ONLY - only used if dbtype is set to postgresql
     # these are the credentials to access the PostgreSQL database
@@ -135,7 +135,6 @@
     #    #port     => 5432,
     #    user     => 'DBUSER',
     #    pwd      => 'DBPASSWORD',
-    #    # https://mojolicious.org/perldoc/Mojo/Pg#max_connections
     #    # optional, default is 1
     #    #max_connections => 1,
     #},
@@ -143,17 +142,16 @@
     # MySQL ONLY - only used if dbtype is set to mysql
     # these are the credentials to access the MySQL database
     # mandatory if you choosed mysql as dbtype
-    #mysqldb => {
-    #    database => 'lufi',
-    #    host     => 'localhost',
-    #    # optional, default is 3306
-    #    #port     => 3306,
-    #    user     => 'DBUSER',
-    #    pwd      => 'DBPASSWORD',
-    #    # https://metacpan.org/pod/Mojo::mysql#max_connections
+    mysqldb => {
+        database => 'lufi_db',
+        host     => 'mariadb',
+        # optional, default is 3306
+        #port     => 3306,
+        user     => 'lufi',
+        pwd      => 'lufi_pwd',
     #    # optional, default is 5 (set to 0 to disable persistent connections)
     #    #max_connections => 5,
-    #},
+    },
 
     # define a path to the upload directory, where the uploaded files will be stored
     # you can define it relative to lufi directory or set an absolute path
